Añadi babel a español y cambie titulo y nombre de autores

--- a/PropuestaProyecto.tex
+++ b/PropuestaProyecto.tex
@@ -5,6 +5,16 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
+
+\title{Propuesta de Proyecto}
+\author{Jose Luis\\Henry Andrade}
+
 \begin{document}
-•
+
+\maketitle
+\section{Introducción y Justificación}
+\section{Marco Teórico}
+\section{Análisis}
+\section{Recursos}
+
 \end{document}
