Añadi items al proyecto

--- a/PropuestaProyecto.tex
+++ b/PropuestaProyecto.tex
@@ -16,5 +16,8 @@
 \section{Marco Teórico}
 \section{Análisis}
 \section{Recursos}
+\begin{itemize}
+		\item[2 WorkStations]
+\end{itemize}
 
 \end{document}
